@@ -6,30 +6,6 @@ on:
       - '*'
 
 jobs:
-  build_wheels:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        python-version: ['3.10', '3.11']
-        os: [ubuntu-20.04, windows-2019, macos-11]
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.1
-
-      - name: publish
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_PWD }}
-        run: |
-          pipx install twine
-          twine upload --skip-existing wheelhouse/*
-
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
@@ -40,6 +16,25 @@ jobs:
 
       - name: Build sdist
         run: pipx run build --sdist
+
+      - name: publish
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_PWD }}
+        run: |
+          pipx install twine
+          twine upload --skip-existing dist/*
+
+  build_wheels:
+    name: Build source distribution
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Build sdist
+        run: pipx run build --wheel
 
       - name: publish
         env:
